# Atalaya

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
atalaya/: logger.py  terminal.py  time_manager.py  writer.py
atalaya/logging/: __init__.py  csv_logger.py  git_info.py  output_catcher.py  run_info.py
example/: README.md  main.py  mlp.py  run.sh
example/logs/test_20190910_150535/: best.pth  params.json
example/logs/test_20190910_150535/checkpoints/: checkpoint.pth
example/logs/test_20190910_150535/grapher_data/: test.csv  testScalar.csv  train.csv  trainScalar.csv
