[tool.poetry]
name = "atalaya"
version = "0.2.0"
description = "Flexible experiment logging helpers for PyTorch projects."
authors = ["Joao Ramos <joao@cramos.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "atalaya" }]
homepage = "https://github.com/jacr13/Atalaya"
repository = "https://github.com/jacr13/Atalaya"
keywords = ["pytorch", "tensorboard", "logging", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
tensorboardX = "^2.6"
psutil = "^5.9"
wandb = { version = "^0.17", optional = true }
comet-ml = { version = "^3.37", optional = true }
clearml = { version = "^1.16", optional = true }
neptune = { version = "^1.10", optional = true }
neptune-tensorboard = { version = "^2.0", optional = true }
matplotlib = { version = "^3.8", optional = true }
seaborn = { version = "^0.13", optional = true }

[tool.poetry.extras]
wandb = ["wandb"]
comet = ["comet-ml"]
clearml = ["clearml"]
neptune = ["neptune", "neptune-tensorboard"]
visualization = ["matplotlib", "seaborn"]
all = [
    "wandb",
    "comet-ml",
    "clearml",
    "neptune",
    "neptune-tensorboard",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
