[tool.poetry]
name = "atalaya"
version = "0.2.8"
description = "Flexible experiment logging helpers for PyTorch projects."
authors = ["Joao Ramos <joao@cramos.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "atalaya" }]
homepage = "https://github.com/jacr13/Atalaya"
repository = "https://github.com/jacr13/Atalaya"
keywords = ["pytorch", "tensorboard", "logging", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
tensorboardX = "^2.6"
psutil = "^7.1"
wandb = { version = "^0.22", optional = true }
comet-ml = { version = "^3.54", optional = true }
clearml = { version = "^2.0", optional = true }
neptune = { version = "^1.14", optional = true, extras = ["tensorboard"] }
matplotlib = { version = "^3.10", optional = true }
seaborn = { version = "^0.13", optional = true }

[tool.poetry.extras]
wandb = ["wandb"]
comet = ["comet-ml"]
clearml = ["clearml"]
neptune = ["neptune"]
visualization = ["matplotlib", "seaborn"]
all = [
    "wandb",
    "comet-ml",
    "clearml",
    "neptune",
    "matplotlib",
    "seaborn",
]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"

[tool.poe.tasks.clean-dist]
shell = "rm -rf dist build"

[tool.poe.tasks.publish]
sequence = ["clean-dist", { cmd = "poetry publish --build" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
